# mrchester

./: CMakeLists.txt  DrawableImage.cpp  DrawableImage.h  MrChesterConfig.h.in  MyGraphicsView.cpp  MyGraphicsView.h  README.md  chester.pro  dialog.cpp  dialog.h  graphicwindow.cpp  graphicwindow.h  layoutitem.cpp  layoutitem.h  main.cpp  mainwindow.cpp  mainwindow.h
